# MTE380_SR

./: .gitignore  README.md  i2c_vector_bridge.py
design_calcs/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.xdv
embedded/: platformio.ini
embedded/src/: main.cpp
robot_control_system/: .dockerignore  Dockerfile  README.md  TODO.txt  config.py  config.yaml  docker-compose.yaml  requirements.txt  temp.yaml
robot_control_system/.claude/: settings.local.json
robot_control_system/cli/: main.py
robot_control_system/hardware/: heading_pid.py  main.py  pid.py  robot.py  speed_pid.py
robot_control_system/state_machine/: __init__.py  machine.py  main.py  state.py  (+1 more)
system/: README_LOCAL.md  TODO.txt  __init__.py  alloy.md  bridge.py  button_stack_controller.py  config.py  config.yaml  control.py  control_tuning_screen.md  docker-architecture.md  docker-compose.yaml  install.sh  install_button_controller_service.py  mte380-button-controller.service  perception.py  pid_config.json  reallyworkinglatest.yaml  requirements-local.txt  requirements-run.txt  requirements.txt  run.py  run.sh  run_local_line_follow.py  run_perception_host_webcam.sh  run_perception_rpicam.sh  start_camera_with_logs.sh  state_machine.md  state_machine.py  test_perception.py  test_perception_pi.py  update_and_start.sh  web_server.py  web_server_index.html  working.yaml
system/state_machine/: CMakeLists.txt  Dockerfile  app.py  requirements.txt  sm_api.py  sm_control_comm.py  sm_input_buffer.py  sm_logging.py  sm_models.py  sm_parse.py  sm_runtime.py  sm_state_machine.py  state_machine.md
(+171 files in other folders)
